# ose-srd-es

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
01_personajes_jugadores/1_parametros_del_juego/: index.html
01_personajes_jugadores/2_creacion_de_personaje/: index.html
01_personajes_jugadores/3_caracteristicas/: index.html
01_personajes_jugadores/4_alineamiento/: index.html
01_personajes_jugadores/5_idiomas/: index.html
01_personajes_jugadores/6_experiencia/: index.html
01_personajes_jugadores/7_riqueza/: index.html
01_personajes_jugadores/8_dominios/: index.html
01_personajes_jugadores/9_ayudantes/: index.html
02_aventura/01_organizacion_del_grupo/: index.html
02_aventura/02_tiempo_peso_movimiento/: index.html
02_aventura/03_chequeos_daño_salvaciones/: index.html
02_aventura/04_peligros_y_desafios/: index.html
02_aventura/05_aventuras_en_mazmorras/: index.html
02_aventura/06_aventuras_en_tierras_salvajes/: index.html
02_aventura/07_aventuras_maritimas/: index.html
02_aventura/08_encuentros/: index.html
02_aventura/09_huida_y_persecucion/: index.html
02_aventura/10_combate/: index.html
02_aventura/11_reglas_de_combate_adicionales/: index.html
02_aventura/12_moral/: index.html
02_aventura/13_tablas_de_combate/: index.html
02_aventura/14_sirvientes/: index.html
02_aventura/15_vehiculos/: index.html
03_magia/1_hechizos/: index.html
03_magia/2_grimorios/: index.html
03_magia/3_investigacion_magica/: index.html
04_monstruos/1_parametros_del_juego/: index.html
04_monstruos/2_notas/: index.html
05_desarrollar_una_aventura/1_el_papel_del_arbitro/: index.html
99_licencia/: index.html
search/: search_index.json
src/: .pages  99_licencia.md  index.md  licencia.md
stylesheets/: extra.css
(+693 files in other folders)
