[tool.poetry]
name = "ose-srd-es"
version = "1.0.0"
description = "Traducción del System Reference Document (SRD) de Old-School Essentials (OSE) al español."
authors = ["logoff"]
license = "Open Game License v1.0a"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-glightbox = "^0.3.4"
babel = "^2.12.1"
mkdocs-awesome-pages-plugin = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
