[tool.poetry]
name = "ose-srd-es"
version = "1.1.0"
description = "Traducción del System Reference Document (SRD) de Old-School Essentials (OSE) al español."
authors = ["logoff"]
license = "Open Game License v1.0a"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-glightbox = "^0.3.6"
babel = "^2.14.0"
mkdocs-awesome-pages-plugin = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
